[gd_scene load_steps=7 format=3 uid="uid://8hxc8kbykwps"]

[ext_resource type="Script" uid="uid://u8y7bbpfniku" path="res://addons/godot-assetmanager/Scripts/Editor/EditorAssetManager.gd" id="1_frqmj"]
[ext_resource type="Script" uid="uid://da0kdlm2a84sh" path="res://addons/godot-assetmanager/Scripts/Editor/UIs/UIPrompt_DeleteConfirmation.gd" id="2_6yrux"]
[ext_resource type="Texture2D" uid="uid://dhh860yb86snf" path="res://addons/godot-assetmanager/Textures/icon_close.svg" id="2_kbicf"]
[ext_resource type="Script" uid="uid://tmvt3mhou6bw" path="res://addons/godot-assetmanager/Scripts/Editor/UIs/UIPrompt_CreateNewAssetId.gd" id="4_nm2x7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xaqi5"]
bg_color = Color(0.145098, 0.145098, 0.145098, 0.478431)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h7yut"]
bg_color = Color(0.298039, 0.298039, 0.298039, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="EditorAssetManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_frqmj")

[node name="VBOX_Page" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="REFRECT_TopBar" type="ReferenceRect" parent="VBOX_Page"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
border_width = 0.0

[node name="MarginContainer" type="MarginContainer" parent="VBOX_Page/REFRECT_TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBOX_Page/REFRECT_TopBar/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="BTN_CreateNewAssetId" type="Button" parent="VBOX_Page/REFRECT_TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Create New Asset Id"

[node name="BTN_DeleteAssetType" type="Button" parent="VBOX_Page/REFRECT_TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Delete Asset Type"

[node name="REFRECT_Content" type="ReferenceRect" parent="VBOX_Page"]
layout_mode = 2
size_flags_vertical = 3
border_width = 0.0

[node name="MarginContainer" type="MarginContainer" parent="VBOX_Page/REFRECT_Content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBOX_Page/REFRECT_Content/MarginContainer"]
layout_mode = 2

[node name="TABCONT_AssetType" type="TabContainer" parent="VBOX_Page/REFRECT_Content/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PN_DeleteConfirmationPopUp" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.000822178
theme_override_styles/panel = SubResource("StyleBoxFlat_xaqi5")
script = ExtResource("2_6yrux")

[node name="CenterContainer" type="CenterContainer" parent="PN_DeleteConfirmationPopUp"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PN_DeleteConfirmationPopUp/CenterContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h7yut")

[node name="MarginContainer" type="MarginContainer" parent="PN_DeleteConfirmationPopUp/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PN_DeleteConfirmationPopUp/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TXT_Title" type="Label" parent="PN_DeleteConfirmationPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Warning"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="Panel" parent="PN_DeleteConfirmationPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TXT_Description" type="Label" parent="PN_DeleteConfirmationPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(390, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -13.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Are you sure you want to delete CharacterProfile.CharB?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PN_DeleteConfirmationPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Control" type="Control" parent="PN_DeleteConfirmationPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BTN_Yes" type="Button" parent="PN_DeleteConfirmationPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Yes
"

[node name="Control2" type="Control" parent="PN_DeleteConfirmationPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="PN_DeleteConfirmationPopUp/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="BTN_Close" type="Button" parent="PN_DeleteConfirmationPopUp/CenterContainer/PanelContainer/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -25.0
offset_bottom = 25.0
grow_horizontal = 0
icon = ExtResource("2_kbicf")
icon_alignment = 1
expand_icon = true

[node name="PN_CreateNewAssetIdPopUp" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.000822178
theme_override_styles/panel = SubResource("StyleBoxFlat_xaqi5")
script = ExtResource("4_nm2x7")

[node name="CenterContainer" type="CenterContainer" parent="PN_CreateNewAssetIdPopUp"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PN_CreateNewAssetIdPopUp/CenterContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h7yut")

[node name="MarginContainer" type="MarginContainer" parent="PN_CreateNewAssetIdPopUp/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PN_CreateNewAssetIdPopUp/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TXT_Title" type="Label" parent="PN_CreateNewAssetIdPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Warning"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PN_CreateNewAssetIdPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="LE_AssetId" type="LineEdit" parent="PN_CreateNewAssetIdPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "Enter AssetType.AssetName"
select_all_on_focus = true
caret_blink = true

[node name="LE_AssetUID" type="LineEdit" parent="PN_CreateNewAssetIdPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "Enter Asset UID"
select_all_on_focus = true
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="PN_CreateNewAssetIdPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Control" type="Control" parent="PN_CreateNewAssetIdPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BTN_Yes" type="Button" parent="PN_CreateNewAssetIdPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Yes
"

[node name="Control2" type="Control" parent="PN_CreateNewAssetIdPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="PN_CreateNewAssetIdPopUp/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="BTN_Close" type="Button" parent="PN_CreateNewAssetIdPopUp/CenterContainer/PanelContainer/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -25.0
offset_bottom = 25.0
grow_horizontal = 0
icon = ExtResource("2_kbicf")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="VBOX_Page/REFRECT_TopBar/MarginContainer/HBoxContainer/BTN_CreateNewAssetId" to="." method="_on_btn_create_new_asset_id_pressed"]
[connection signal="pressed" from="VBOX_Page/REFRECT_TopBar/MarginContainer/HBoxContainer/BTN_DeleteAssetType" to="." method="_on_btn_delete_asset_type_pressed"]
[connection signal="pressed" from="PN_DeleteConfirmationPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/BTN_Yes" to="PN_DeleteConfirmationPopUp" method="_on_btn_yes_pressed"]
[connection signal="pressed" from="PN_DeleteConfirmationPopUp/CenterContainer/PanelContainer/MarginContainer/Control/BTN_Close" to="PN_DeleteConfirmationPopUp" method="_on_btn_close_pressed"]
[connection signal="pressed" from="PN_CreateNewAssetIdPopUp/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/BTN_Yes" to="PN_CreateNewAssetIdPopUp" method="_on_btn_yes_pressed"]
[connection signal="pressed" from="PN_CreateNewAssetIdPopUp/CenterContainer/PanelContainer/MarginContainer/Control/BTN_Close" to="PN_CreateNewAssetIdPopUp" method="_on_btn_close_pressed"]
